<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/login_root"
	android:orientation="vertical">
	<ImageView
		android:layout_height="wrap_content"
		android:src="@drawable/worddit"
		android:scaleType="centerInside"
		android:layout_width="wrap_content"
		android:layout_gravity="center_horizontal"
		android:id="@+id/login_header_graphic"></ImageView>
	<FrameLayout
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:id="@+id/login_form">
		<LinearLayout
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:id="@+id/login_form"
			android:layout_width="fill_parent">
			<EditText
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:hint="@string/hint_email"
				android:id="@+id/login_input_email"
				android:layout_width="200dp"
				android:lines="1"
				android:ellipsize="end"></EditText>
			<EditText
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:hint="@string/hint_password"
				android:id="@+id/login_input_password"
				android:lines="1"
				android:ellipsize="end"
				android:layout_width="200dp" android:inputType="textPassword"></EditText>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:id="@+id/login_container_buttons"
				android:paddingTop="15sp">
				<Button
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:id="@+id/login_button_login"
					android:text="@string/label_login"
					android:layout_width="100dp"></Button>
				<Button
					android:layout_height="wrap_content"
					android:id="@+id/login_button_create"
					android:text="@string/label_create"
					android:layout_width="100dp"></Button>
			</LinearLayout>


</LinearLayout></FrameLayout>
</LinearLayout>
